[gd_scene load_steps=8 format=3 uid="uid://bxgfe0in2rf5q"]

[ext_resource type="Script" path="res://scenes/PauseScreen/pause_screen.gd" id="1_uwtp5"]
[ext_resource type="Texture2D" uid="uid://ls0fdgi7l8jd" path="res://assets/icons/play.svg" id="2_wpm5i"]
[ext_resource type="Texture2D" uid="uid://dqtokyjkkgurb" path="res://assets/icons/info.svg" id="3_vaxia"]
[ext_resource type="Texture2D" uid="uid://c6eyjk20ycaxk" path="res://assets/icons/replay.svg" id="4_yrg4r"]
[ext_resource type="Texture2D" uid="uid://cbxokgmoimc2l" path="res://assets/icons/exit.svg" id="5_07qil"]
[ext_resource type="Texture2D" uid="uid://bagh62rx01y2o" path="res://assets/icons/sound.svg" id="6_7lqax"]
[ext_resource type="Texture2D" uid="uid://vm0vxmngci0r" path="res://assets/icons/vibration.svg" id="7_6ma53"]

[node name="PauseScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uwtp5")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Header" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Game Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"
icon = ExtResource("2_wpm5i")
alignment = 0

[node name="HowToPlayButton" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "How to play"
icon = ExtResource("3_vaxia")
alignment = 0

[node name="RestartButton" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Restart"
icon = ExtResource("4_yrg4r")
alignment = 0

[node name="ExitGameButton" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Exit game"
icon = ExtResource("5_07qil")
alignment = 0

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="SoundButton" type="Button" parent="HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FlatButton"
text = "Sound | Off"
icon = ExtResource("6_7lqax")
alignment = 0

[node name="SoundSwitch" type="CheckButton" parent="HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="VibrationButton" type="Button" parent="HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FlatButton"
text = "Vibration | On"
icon = ExtResource("7_6ma53")
alignment = 0

[node name="VibrationSwitch" type="CheckButton" parent="HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
