extends Control

@onready var header: Label = %Header
@onready var resume_button: Button = %ResumeButton
@onready var how_to_play_button: Button = %HowToPlayButton
@onready var restart_button: Button = %RestartButton
@onready var exit_game_button: Button = %ExitGameButton
@onready var sound_button: Button = %SoundButton
@onready var sound_switch: CheckButton = %SoundSwitch
@onready var vibration_button: Button = %VibrationButton
@onready var vibration_switch: CheckButton = %VibrationSwitch
